# mimir-mvp

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  IMPLEMENTATION.md  PROJECT_SUMMARY.txt  README.md  SETUP.md  alembic.ini  install.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_external_id.py  003_add_projects.py
mimir/: __init__.py  cli.py  config.py  db.py  handlers.py  logger.py  models.py  output.py  state_manager.py
mimir/handlers/: __init__.py  _common.py  branch.py  commit.py  context.py  init.py  project.py  status.py  task.py
mimir/services/: __init__.py  branch_service.py  commit_service.py  project_service.py  task_service.py
rich/: console.py  table.py
sqlalchemy/: __init__.py  orm.py
tests/: __init__.py  conftest.py  test_handlers.py  test_services.py
